<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.MainActivity">

    <data>
        <variable name="item"
            type="com.example.technical.challenge.domain.model.network.request.SearchItemsModel"/>
        <variable
            name="viewModel"
            type="com.example.technical.challenge.presentation.productsList.ProductsFragmentViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:padding="@dimen/dp_20"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_txt_maker"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/maker"
        android:text="@={item.maker}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_txt_model"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_txt_maker"
        android:hint="@string/model"
        android:text="@={item.model}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_txt_year"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_txt_model"
        android:hint="@string/year"
        android:text="@={item.year}"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_search"
        android:text="@string/search"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_txt_year"
        android:onClickListener="@{()->viewModel.getProductsList()}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        app:layout_constraintTop_toBottomOf="@+id/btn_search"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="@{viewModel.progressVisibility}"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:text="@{viewModel.errorFieldString}"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_search"
        android:visibility="@{viewModel.errorFieldVisibility}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcy_view_products_list"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>